--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -20,6 +20,10 @@
     }
     {% endif %}
 </style>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/social-share.js/1.0.16/css/share.min.css"  crossorigin="anonymous" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/social-share.js/1.0.16/js/social-share.min.js" integrity="sha256-fGPu+icKh985TLPhO2v68U7i0CW0dE4kiR06RN4O6jo=" crossorigin="anonymous"></script>
+
 {% if page.header-style == 'text' %}
 <header class="intro-header style-text" >
 {% else %}
