--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,7 +60,7 @@ layout: default
                 <!-- disqus 评论框 end -->
                 {% endif %}
 
-                {% if site.share %}
+                {% if site.social_share %}
                 <div id="cloud-tie-wrapper" class="social-share" data-sites="wechat,weibo,twitter,facebook,douban" data-mobile-sites="wechat,weibo"></div>
                 {% endif %}
 
