--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,8 @@
       #dify-chatbot-bubble-window {
         width: 24rem !important;
         height: 40rem !important;
+        bottom: 80px !important;
+        right: 20px !important;
       }
     </style>
 
