--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,11 +40,12 @@
     </script>
     <style>
       #dify-chatbot-bubble-button {
-        background-color: #1C64F2 !important;
+        background-color: #751cf2 !important;
       }
       #dify-chatbot-bubble-window {
         width: 24rem !important;
         height: 40rem !important;
+        right: 10rem !important;
       }
     </style>
 
